# microHorizonV2

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: build_linux.yml  build_windows.yml
scripts/: build_linux.sh  build_win.bat  run_test_linux.sh
scripts/docker_images/Linux_x64_img/: Dockerfile
src/: CMakeLists.txt
src/Tracer/: CMakeLists.txt  tracer.cpp  tracer.h
src/fancyFrontEnd/: CMakeLists.txt  FEHelpers.cpp  FEHelpers.h  fancyFrontEnd.cpp  fancyFrontEnd.h
src/horizonWorker/: CMakeLists.txt  horizonWorker.cpp  horizonWorker.h  posMatcherImpl.cpp  posMatcherImpl.h
src/microHorizonApp/: CMakeLists.txt  configurator.cpp  configurator.h  main.cpp
src/osmLoadWorker/: CMakeLists.txt  RoadLoader.cpp  RoadLoader.h
src/posInputWorker/: CMakeLists.txt  posInputWorker.cpp  posInputWorker.h
src/shared/: CMakeLists.txt  SharedData.h
test/: CMakeLists.txt  map_paths.h.in  test_horizonWorker.cpp
test/map_data/: simple_near_haukipudas.osm
test/test_horizonWorker/: CMakeLists.txt  test_horizonWorker.cpp
tools/: README.md  plist_to_udp_sender.py
tools/map_to_posobs/: map_to_pos_obs.py
tools/map_to_posobs/static/: leaflet.rotatedMarker.js  scripts.js  style.css
tools/map_to_posobs/templates/: main.html
